--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -4,7 +4,8 @@
         <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12">
         <h2><strong>Planner Custom Editor</strong></h2>
             <!-- close button -->
-            <!--<button class="btn btn-primary btn-md"><i class="fa fa-times"></i></button> -->
+            <a href="/courses/URST/planner/" target="_blank" role="button" class="btn btn-success btn-lg"><i class="fa fa-link"></i> View Planner Live Link</a> 
+            <p></p>
             <!-- Nav tabs -->
             <ul class="nav nav-tabs" role="tablist">
                 <li role="presentation" class="active"><a href="#theme" aria-controls="theme" role="tab" data-toggle="tab">Theme</a></li>
