--- a/src/app/custom-date/custom-date.component.html
+++ b/src/app/custom-date/custom-date.component.html
@@ -1,12 +1,11 @@
-<div class="dateArea" *ngFor="let t of assignments[value].due_date" [ngStyle]="{'background-image': 'url('+ 'assets/images/' + t.image + ')', 'background-size': 'contain', 'background-repeat': 'no-repeat'}">
+<!--<div class="dateArea" *ngFor="let t of assignments[value].due_date" [ngStyle]="{'background-image': 'url('+ 'assets/images/' + t.image + ')', 'background-size': 'contain', 'background-repeat': 'no-repeat'}">-->
+<div class="dateArea" *ngFor="let t of assignments[value].due_date">
     <!--  <img *ngIf="value>0 && value < amount-2" [src]="imageSrc(this.assignments[value].due_date)" class="img-responsive imageSize visible-sm visible-xs"/> -->
-<div class="month">
-    <h3>{{ t.month }}</h3>
-</div>
-<div class="day">
-    <h2> {{ t.day }}</h2>
-</div>
-<div class="percent">
-	<h2> {{ t.percentage }}% </h2>
-</div>
+	<div class="col-md-3 col-lg-3 col-sm-3 col-xs-3">
+    	<h3>{{ t.month }}</h3>
+    	<h2> {{ t.day }}</h2>
+    	<div class="circ">
+    	<h2> {{ t.percentage }}% </h2>
+    	</div>
+	</div>
 </div>
