--- a/src/app/live/live.component.html
+++ b/src/app/live/live.component.html
@@ -51,7 +51,7 @@
 
                     <!-- due date image -->
                     <div class="col-md-3 col-lg-3 hidden-sm hidden-xs" *ngIf="data.value>=0">
-                        <app-custom-date [value]="data.value" [amount]="amount" [assignments]="assignments"></app-custom-date>
+                        <app-custom-date [value]="data.value" [amount]="amount" [assignments]="assignments" [ui]="ui"></app-custom-date>
                     </div>
 
                     <!-- Progress bar -->
