--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -6,6 +6,11 @@
             <!-- close button -->
             <a href="/courses/URST/planner/" target="_blank" role="button" class="btn btn-success btn-lg"><i class="fa fa-link"></i> View Planner Live Link</a> 
             <p></p>
+            <!-- save button -->
+<div class="col-md-12 col-lg-12 col-sm-12 col-xs-12">
+    <p></p>
+    <button type="button" class="btn btn-default btn-lg pull-right" (click)="saveToFile()" *ngIf="data.value>=-1">Save &amp; Generate</button>
+</div>
             <!-- Nav tabs -->
             <ul class="nav nav-tabs" role="tablist">
                 <li role="presentation" class="active"><a href="#theme" aria-controls="theme" role="tab" data-toggle="tab">Theme</a></li>
