--- a/src/app/custom-date/custom-date.component.html
+++ b/src/app/custom-date/custom-date.component.html
@@ -2,8 +2,8 @@
 <div class="dateArea" *ngFor="let t of assignments[value].due_date">
     <!--  <img *ngIf="value>0 && value < amount-2" [src]="imageSrc(this.assignments[value].due_date)" class="img-responsive imageSize visible-sm visible-xs"/> -->
 	<div class="col-md-3 col-lg-3 col-sm-3 col-xs-3">
-    	<h3>{{ t.month }}</h3>
-    	<h2> {{ t.day }}</h2>
+    	<!--<h3>{{ t.month }}</h3>
+    	<h2> {{ t.day }}</h2>-->
     	<div class="circ">
     	<h2> {{ t.percentage }}% </h2>
     	</div>
