--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -11,13 +11,8 @@
   	</li>
     <li *ngFor="let d of assignments; let i = index" class="list">
     <button type="button" class="numButtons circle" id={{i}} (click)="goTo(i)" [ngStyle]="{'background': currentColor(i), 'border-color': currentColor(i)}">
-          {{ i+1 }}
+          {{ changeName(i) }}
       </button>
       <div id="line" class="hidden-xs hidden-sm" *ngIf="i<=assignments.length"></div>
-  </li>
-  <li class="list">
-    <button type="button" class="numButtons circle" id="r" (click)="showReview()" [ngStyle]="{'background': ui?.buttons?.color, 'border-color': ui?.buttons?.color}">
-          R
-      </button>
   </li>
 </ul>
