--- a/src/app/nav/nav.component.scss
+++ b/src/app/nav/nav.component.scss
@@ -3,15 +3,20 @@ b {
     font-family: sans-serif;
 }
 
+.list{
+  text-align: center;
+}
+
 .buttonList{
-  margin-left: 35px;
+  padding: 1%;
 }
 
 .numButtons {
-    float: left;
+   // float: left;
+   display: inline;
     margin-right: 5%;
     z-index: 1000;
-    margin: 7px 15px 0px 0px;
+   // margin: 7px 15px 0px 0px;
 }
 
 .resize {
