--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -43,7 +43,7 @@
                     <h3 class="animated fadeIn activityTitle" *ngIf="data.value==-1" [ngStyle]="{'color': ui?.subheadings?.color}"><i class="fa fa-calendar-o"></i> {{ data.activity }} </h3>
                     <app-instructions *ngIf="data.value==-1" [data]="data" [instructions]="instructions" [ui]="ui" [assignments]="assignments"></app-instructions>
                     <!-- assignment Info title -->
-                <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12" *ngIf="data.value>=0 && data.value<amount-1">
+                <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12" *ngIf="data.value>=0 && data.value<data?.assignments?.length-1">
                         <h2 class="titles pull-left" [ngStyle]="{'color': ui?.subheadings?.color}"><i class="fa fa-file-text-o"></i> Assignment Information</h2>
                         <h2 class="titles pull-right" [ngStyle]="{'color': ui?.subheadings?.color}"><i class="fa fa-calendar"></i> Date &amp; Percentage</h2>
                     </div>
@@ -58,7 +58,7 @@
                     </div>
 
                     <!-- Progress bar -->
-                    <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12" *ngIf="data.value<amount-1">
+                <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12" *ngIf="data.value > -1 &&  data.value<data?.assignments?.length-1">
                     	<h2 class="titles" [ngStyle]="{'color': ui?.subheadings?.color}"><i class="fa fa-pie-chart"></i> Assignment Progress</h2>
                     	<p><app-progress [data]="data" [value]="value" [amount]="amount" [assignments]="assignments" [ui]="ui" ></app-progress></p>
                     </div>
@@ -85,7 +85,7 @@
                     <app-custom *ngIf="data.value<amount-1" [data]="data" [assignments]="assignments" [amount]="amount" [ui]="ui"></app-custom>
 
                     <!--print area -->
-                    <div class="printArea" *ngIf="data.value == amount-1">
+                    <div class="printArea" *ngIf="data.value == data?.assignments?.length-1">
                         <div class="col-md-9 col-lg-9 col-sm-9 col-xs-9">
                             <h2 class="titles" [ngStyle]="{'color': ui?.subheadings?.color}">Review Information {{data.reviewArea}}</h2></div>
                         <div class="col-md-3 col-lg-3 col-sm-3 col-xs-3">
