--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -7,12 +7,12 @@
     <button type="button" class="numButtons circle" id="r" (click)="goToStart()" [ngStyle]="{'background': getCurrentColor(ui?.buttons?.color, ui?.buttons?.hover), 'border-color': getCurrentColor(ui?.buttons?.color, ui?.buttons?.hover)}">
           S
       </button>
-      <!--<div id="line" class="hidden-xs hidden-sm"></div>-->
+      <div id="line" class="hidden-xs hidden-sm"></div>
   	</li>
     <li *ngFor="let d of assignments; let i = index" class="list">
     <button type="button" class="numButtons circle" id={{i}} (click)="goTo(i)" [ngStyle]="{'background': currentColor(i), 'border-color': currentColor(i)}">
           {{ changeName(i) }}
       </button>
-     <!-- <div id="line" class="hidden-xs hidden-sm" *ngIf="i<=assignments.length-2"></div> -->
+     <div id="line" class="hidden-xs hidden-sm" *ngIf="i<=assignments.length-1"></div>
   </li>
 </ul>
