--- a/src/app/nav/nav.component.scss
+++ b/src/app/nav/nav.component.scss
@@ -27,8 +27,14 @@ b {
 }
 
 #line {
-    width: 97%;
-    margin: 38px 0px 0px 5px;
+    width: 100%;
+   margin: -30px 0px 0px 5px;
+    height: 1px;
+}
+
+.linehalf {
+    width: 50%;
+   margin: -30px 0px 0px 5px;
     height: 1px;
 }
 
