--- a/src/app/heading/heading.component.html
+++ b/src/app/heading/heading.component.html
@@ -2,7 +2,7 @@
     title and subtitle with symbol
  -->
  <div *ngIf="data.value >= 0">
-    <div class="header" *ngFor="let d of assignments; let i = index">
+    <div class="header" *ngFor="let d of data?.assignments; let i = index">
 
       <div class="symbol pull-left hidden-xs" *ngIf="i==data.value" [ngStyle]="{'background-color': ui?.buttons?.hover, 'color': ui?.symbol?.color, 'border-color': ui?.buttons?.hover}">{{ i+1 }}</div>
 
