--- a/src/app/multi-tasks/multi-tasks.component.html
+++ b/src/app/multi-tasks/multi-tasks.component.html
@@ -1,4 +1,4 @@
-<div *ngFor="let d of assignments; let i = index">
+<div *ngFor="let d of data?.assignments; let i = index">
     <div class="twoTasks" *ngIf="d.type=='task' && i==data.value">
         <div *ngFor="let t of d.tasks; let k = index" class="taskA">
             <!-- multiple tasks -->
