--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -1,16 +1,33 @@
+<nav class="navbar navbar-default nav-pills">
+  <div class="container">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="/admin"><strong>Course Planner Editor</strong></a>
+    </div>
+
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li><a role="button" href="/courses/URST/planner/" target="_blank" class="btn btn-default"><i class="fa fa-link"></i> View Planner Live Link</a></li>
+        <li><a role="button" class="btn btn-default" (click)="saveToFile()" *ngIf="data.value>=-1"><i class="fa fa-check"></i> Save &amp; Generate</a></li>
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
+          <li><a role="button" class="btn btn-default" *ngIf="data.value>=-1"><i class="fa fa-question-circle"></i> Help</a></li>
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
 <div class="leftMenu">
     <div class="container">
         <div class="row">
         <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12">
-        <h2><strong>Planner Custom Editor</strong></h2>
-            <!-- close button -->
-            <a href="/courses/URST/planner/" target="_blank" role="button" class="btn btn-success btn-lg"><i class="fa fa-link"></i> View Planner Live Link</a> 
             <p></p>
-            <!-- save button -->
-<div class="col-md-12 col-lg-12 col-sm-12 col-xs-12">
-    <p></p>
-    <button type="button" class="btn btn-default btn-lg pull-right" (click)="saveToFile()" *ngIf="data.value>=-1">Save &amp; Generate</button>
-</div>
             <!-- Nav tabs -->
             <ul class="nav nav-tabs" role="tablist">
                 <li role="presentation" class="active"><a href="#theme" aria-controls="theme" role="tab" data-toggle="tab">Theme</a></li>
@@ -53,21 +70,6 @@
                     <div class="panel panel-default">
                         <div class="panel-heading"><strong><i class="fa fa-paint-brush"></i> Theme Colors</strong></div>
                         <div class="panel-body">
-                            <!--<p><strong>Monochromatic Color Palette</strong></p>
-<div class="input-group">
-      <span class="input-group-addon" id="basic-addon1">HEX #</span>
-      <input type="text" class="firstColor jscolor form-control" value="FFFFFF" id="userColor">
-      <span class="input-group-btn">
-        <button class="btn btn-default" type="button" (click)="getMonoColorPalette('userColor')">Apply</button>
-      </span>
-</div>
-<p></p>-->
-                            <!--<div class="input-group" *ngFor="let p of monoColors | keys; let i = index">
-                                <input type="text" class="jscolor form-control" value="{{monoColors[i]}}" id="m{{i}}" [ngStyle]="{'background': monoColors[i]}">
-                                <span class="input-group-btn">
-        <button class="btn btn-default" type="button" (click)="editColors(i)">Apply</button>
-      </span>
-                            </div>-->
                             <p></p>
                             <p><strong>Generate Theme Colors</strong></p>
                             <div class="input-group">
@@ -127,5 +129,8 @@
             </div>
             </div>
         </div>
+        <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12">
+        <h2 class="text-center"><i class="fa fa-lightbulb-o"></i> Planner Preview </h2>
+    </div>
     </div>
 </div>
