--- a/src/app/input-tasks/input-tasks.component.html
+++ b/src/app/input-tasks/input-tasks.component.html
@@ -1,20 +1,20 @@
 <div class="col-md-4 col-lg-4 col-sm-4 col-xs-4" *ngFor="let x of arr; let b = index">
 <p></p>
-<h4><strong> Task {{ i }}</strong></h4>
+<h4><strong> Task {{ b+1 }}</strong></h4>
 <p></p>
 <form>
 	<p *ngIf="data.value>=0"><strong> Title </strong></p>
     <p *ngIf="data.value>=0"></p>
     <div class="form-group" *ngIf="data.value>=0">
-       <input type="text" class="form-control" [(ngModel)]="Title" [value]="Titles" (ngModelChange)="c.due_date[0].percentage = $event" name="percentages" placeholder="{{x.name}}">
+       <input type="text" class="form-control" [(ngModel)]="x.name" [value]="Titlesb" (ngModelChange)="x.name = $event" name="Titles" placeholder="{{x.name}}">
    </div>
 
    <p *ngIf="data.value>=0"><strong> Description</strong></p>
     <p *ngIf="data.value>=0"></p>
     <div class="form-group" *ngIf="data.value>=0">
-       <input type="text" class="form-control" [(ngModel)]="Title" [value]="Title" (ngModelChange)="c.due_date[0].percentage = $event" name="percentages" placeholder="{{x.information}}">
+       <input type="text" class="form-control" [(ngModel)]="x.information" [value]="Informationb" (ngModelChange)="x.information = $event" name="Information" placeholder="{{x.information}}">
    </div>
 
-   <button class="btn btn-danger btn-lg" *ngIf="arr?.length > 1"><i class="fa fa-times"></i> Remove Task</button>
+   <button class="btn btn-danger btn-lg" *ngIf="arr?.length > 1" (click)="removeTask(x)"><i class="fa fa-times"></i> Remove Task</button>
 </form>
 </div>
