--- a/src/app/competencies/competencies.component.html
+++ b/src/app/competencies/competencies.component.html
@@ -1,3 +1,3 @@
-<p>
-  competencies works!
-</p>
+<div class="col-md-4 col-lg-4 col-sm-4 col-xs-4" *ngFor="let z of data?.competencies; let r = index">
+<p> {{ z.text }}</p>
+</div>
