Added the newest competency list

--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -109,6 +109,8 @@
                 </div>
 
                 <div role="tabpanel" class="tab-pane fade" id="competencies">
+                <h2> Course Competencies</h2>
+                <p>Select the compenticies for your course.</p>
                     <app-competencies [data]="data"></app-competencies>
                 </div>  
         </div>
