--- a/src/app/competencies/competencies.component.html
+++ b/src/app/competencies/competencies.component.html
@@ -1,3 +1,10 @@
-<div class="col-md-4 col-lg-4 col-sm-4 col-xs-4" *ngFor="let z of data?.competencies; let r = index">
-<p> {{ z.text }}</p>
-</div>
+<div class="col-md-3 col-lg-3 col-sm-3 col-xs-3 comp" *ngFor="let z of data?.competencies; let r = index"> 
+  <div class="checkbox">
+    <label>
+      <input type="checkbox" [(ngModel)]="z.selected"> <strong>{{ z.letter }}</strong> 
+      <p> {{z.text}}</p>
+      <p> {{ z.type }} competency </p>
+    </label>
+  </div>
+ </div>
+
