--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -18,7 +18,7 @@
         <li><a role="button" class="btn btn-default" (click)="saveToFile()" *ngIf="data.value>=-1"><i class="fa fa-check"></i> Save &amp; Generate</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-          <li><a role="button" class="btn btn-default" *ngIf="data.value>=-1"><i class="fa fa-question-circle"></i> Help</a></li>
+          <li><a role="button" class="btn btn-default"><i class="fa fa-question-circle" data-toggle="modal" data-target="#myModal"></i> Help</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
@@ -119,4 +119,22 @@
     </div>
 
     </div>
+</div>
+
+<!-- Modal -->
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" id="myModalLabel">Custom Planner Editor</h4>
+      </div>
+      <div class="modal-body">
+        <h1> Welcome!</h1>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
 </div>
