--- a/src/app/competencies/competencies.component.html
+++ b/src/app/competencies/competencies.component.html
@@ -1,10 +1,11 @@
-<div class="col-md-4 col-lg-4 col-sm-4 col-xs-4 comp" *ngFor="let z of data?.competencies; let r = index"> 
-  <div class="checkbox">
+<ul class="list-group comp" >
+<li class="list-group-item col-md-6 col-lg-6 col-sm-12 col-xs-12" *ngFor="let z of data?.competencies; let r = index" [ngStyle]="{'height': '110px'}">
+  <div class="checkbox" [ngClass]="{'texts': z.selected==true}">
     <label>
-      <input type="checkbox" [(ngModel)]="z.selected" (ngModelChange)="!z.selected = $event"> <strong>{{ z.letter }}</strong> 
-      <p [ngClass]="{'texts': z.selected==true}"> {{z.text}}</p>
-      <p><b> {{ z.type }} competency </b></p>
+      <input type="checkbox" [(ngModel)]="z.selected" (ngModelChange)="!z.selected = $event"> <strong>{{ z.letter }}</strong> {{z.text}} 
+      <p><b>Type: {{ z.type }} competency </b></p>
     </label>
   </div>
- </div>
+  </li>
+ </ul>
 
